added disksize parameter for VAGRANT_EXPERIMENTAL functions, tested libvirt successfully

--- a/provider-libvirt/Vagrantfile
+++ b/provider-libvirt/Vagrantfile
@@ -11,12 +11,14 @@ boxes = [
         :name => "calvin",
         :cpus => "2",
         :memory => "4096",
+        :disksize => "20GB",
         :address => "192.168.56.21"
     },
     {
         :name => "hobbes",
         :cpus => "2",
         :memory => "4096",
+        :disksize => "20GB",
         :address => "192.168.56.22"
     }
 ]
@@ -27,10 +29,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   boxes.each do |vars|
     config.vm.define vars[:name] do |machine|
       machine.vm.hostname = vars[:name]
+      machine.vm.disk :disk, size: vars[:disksize], primary: true
       machine.vm.provider "libvirt" do |lbv|
         lbv.driver = "kvm"
         lbv.memory = vars[:memory]
-        lbv.cpus= vars[:cpus]
+        lbv.cpus = vars[:cpus]
       end
       machine.vm.network :private_network, ip: vars[:address]
       machine.vm.synced_folder ".", "/vagrant", disabled: true
