changing rocky linux to alma linux

--- a/provider-libvirt/Makefile
+++ b/provider-libvirt/Makefile
@@ -8,6 +8,10 @@ USER_DIR = $(HOME)
 # UTILITY OPERATIONS
 #
 ##########################################
+.PHONY: vf-alma
+vf-alma:
+	@./bin/create-vagrantfile.sh --alma
+
 .PHONY: vf-alpine
 vf-alpine:
 	@./bin/create-vagrantfile.sh --alpine
@@ -20,10 +24,6 @@ vf-arch:
 vf-debian:
 	@./bin/create-vagrantfile.sh --debian
 
-.PHONY: vf-rocky
-vf-rocky:
-	@./bin/create-vagrantfile.sh --rocky
-
 .PHONY: vf-ubuntu
 vf-ubuntu:
 	@./bin/create-vagrantfile.sh --jammy
@@ -35,10 +35,10 @@ vf-ubuntu:
 ##########################################
 .PHONY: vm-box-add
 vm-box-add:
+	@vagrant box add generic/alma9  --provider=libvirt --force --clean
 	@vagrant box add generic/alpine38 --provider=libvirt --force --clean
 	@vagrant box add generic/arch --provider=libvirt --force --clean
 	@vagrant box add generic/debian11 --provider=libvirt --force --clean
-	@vagrant box add generic/rocky9  --provider=libvirt --force --clean
 	@vagrant box add bento/ubuntu-22.04 --provider=libvirt --force  --clean
 
 .PHONY: vm-box-check
@@ -51,7 +51,11 @@ vm-box-list:
 
 .PHONY: vm-box-nuke
 vm-box-nuke:
-	@vagrant box remove * --all --force
+	@vagrant box remove generic/alma9  --provider=libvirt --force --all
+	@vagrant box remove generic/alpine38 --provider=libvirt --force --all
+	@vagrant box remove generic/arch --provider=libvirt --force --all
+	@vagrant box remove generic/debian11 --provider=libvirt --force --all
+	@vagrant box remove bento/ubuntu-22.04 --provider=libvirt --force  --all
 
 .PHONY: vm-box-health
 vm-box-status:
@@ -124,36 +128,36 @@ vm-snapshot-list:
 	@vagrant snapshot list
 
 .PHONY: vm-forget
-vm-forget: alpine-forget arch-forget debian-forget rocky-forget jammy-forget
+vm-forget: alma-forget alpine-forget arch-forget debian-forget jammy-forget
 
-.PHONY: alpine-forget
-alpine-forget:
+.PHONY: alma-forget
+alma-forget:
 	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.11"
 	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.12"
 	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.13"
 	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.14"
 
-.PHONY: arch-forget
-arch-forget:
+.PHONY: alpine-forget
+alpine-forget:
 	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.21"
 	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.22"
+	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.23"
+	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.24"
+
+.PHONY: arch-forget
+arch-forget:
+	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.31"
+	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.32"
 
 .PHONY: debian-forget
 debian-forget:
-	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.31"
-	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.32"
-	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.33"
-	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.34"
-
-.PHONY: jammy-forget
-jammy-forget:
 	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.41"
 	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.42"
 	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.43"
 	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.44"
 
-.PHONY: rocky-forget
-rocky-forget:
+.PHONY: jammy-forget
+jammy-forget:
 	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.51"
 	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.52"
 	@ssh-keygen -f "${USER_DIR}/.ssh/known_hosts" -R "192.168.56.53"
@@ -164,6 +168,9 @@ rocky-forget:
 # INITIALIZE AND TERMINATE ENVIRONMENTS
 #
 ##########################################
+.PHONY: alma-init
+alma-init: vf-alma vm-up
+
 .PHONY: alpine-init
 alpine-init: vf-alpine vm-up
 
@@ -176,8 +183,8 @@ deb-init: vf-debian vm-up
 .PHONY: jammy-init
 jammy-init: vf-ubuntu vm-up
 
-.PHONY: rocky-init
-rocky-init: vf-rocky vm-up
+.PHONY: alma-term
+alma-term: vf-alma alma-forget vm-destroy
 
 .PHONY: alpine-term
 alpine-term: vf-alpine alpine-forget vm-destroy
@@ -190,9 +197,6 @@ deb-term: vf-debian debian-forget vm-destroy
 
 .PHONY: jammy-term
 jammy-term: vf-ubuntu jammy-forget vm-destroy
-
-.PHONY: rocky-term
-rocky-term: vf-rocky rocky-forget vm-destroy
 
 ##########################################
 #
