--- a/provider-libvirt/ansible/inventory/hosts.yml
+++ b/provider-libvirt/ansible/inventory/hosts.yml
@@ -1,41 +1,41 @@
 ---
 nodes:
   children:
+    alma:
+      hosts:
+        balboa:
+          ansible_host: 192.168.56.11
+        creed:
+          ansible_host: 192.168.56.12
+        clang:
+          ansible_host: 192.168.56.13
+        drago:
+          ansible_host: 192.168.56.14
     alpine:
       hosts:
         federer:
-          ansible_host: 192.168.56.11
+          ansible_host: 192.168.56.21
         nadal:
-          ansible_host: 192.168.56.12
+          ansible_host: 192.168.56.22
         djokovic:
-          ansible_host: 192.168.56.13
+          ansible_host: 192.168.56.23
         murray:
-          ansible_host: 192.168.56.14
+          ansible_host: 192.168.56.24
     arch:
       hosts:
         calvin:
-          ansible_host: 192.168.56.21
+          ansible_host: 192.168.56.31
         hobbes:
-          ansible_host: 192.168.56.22
+          ansible_host: 192.168.56.32
     debian:
       hosts:
         blinky:
-          ansible_host: 192.168.56.31
-        pinky:
-          ansible_host: 192.168.56.32
-        inky:
-          ansible_host: 192.168.56.33
-        clyde:
-          ansible_host: 192.168.56.34
-    rocky:
-      hosts:
-        balboa:
           ansible_host: 192.168.56.41
-        creed:
+        pinky:
           ansible_host: 192.168.56.42
-        clang:
+        inky:
           ansible_host: 192.168.56.43
-        drago:
+        clyde:
           ansible_host: 192.168.56.44
     ubuntu:
       hosts:
