--- a/provider-libvirt/ansible/roles/common/tasks/main.yml
+++ b/provider-libvirt/ansible/roles/common/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Gather Facts with custom variable
-  include_tasks: ./all/facts.yml
+  ansible.builtin.include_tasks: ./all/facts.yml
 
 - name: Install distribution-specific packages
-  include_tasks: "{{ server.distribution }}/main.yml"
+  ansible.builtin.include_tasks: "{{ server.distribution }}/main.yml"
 ...
