--- a/provider-libvirt/ansible/roles/common/tasks/alpine/main.yml
+++ b/provider-libvirt/ansible/roles/common/tasks/alpine/main.yml
@@ -1,8 +1,8 @@
 ---
 - name: Sync Database and upgrade System
   community.general.apk:
-    upgrade: yes
-    update_cache: yes
+    upgrade: true
+    update_cache: true
   become: true
 
 - name: Install Docker Dependencies
