--- a/provider-libvirt/ansible/roles/common/tasks/arch/main.yml
+++ b/provider-libvirt/ansible/roles/common/tasks/arch/main.yml
@@ -2,8 +2,8 @@
 - name: Sync database and upgrade system
   become: true
   community.general.pacman:
-    update_cache: yes
-    upgrade: yes
+    update_cache: true
+    upgrade: true
 
 - name: Strip unwanted packages
   become: true
