--- a/provider-vbox/shared/arch/ansible/tasks/pacman.yml
+++ b/provider-vbox/shared/arch/ansible/tasks/pacman.yml
@@ -1,8 +1,8 @@
 ---
 - name: Sync database and upgrade system
   community.general.pacman:
-    update_cache: yes
-    upgrade: yes
+    update_cache: true
+    upgrade: true
 
 - name: Strip unwanted packages
   community.general.pacman:
