--- a/provider-vbox/shared/ubuntu/ansible/playbook.yml
+++ b/provider-vbox/shared/ubuntu/ansible/playbook.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: Update cache
       apt:
-        update_cache: yes
+        update_cache: true
         cache_valid_time: 3600
       become: true
 
